--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,13 @@
+
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 :root {
   --primary-color: #00cc00;
 }
-
+/**/
 body {
   background: #F2F2F2;
   margin: 0;
